Fixed logo centering on mobile

--- a/animation-style.css
+++ b/animation-style.css
@@ -194,6 +194,7 @@ AlwaysShowSection .reveal{
   max-width: 300px; 
 }
 
+
 @media (max-width: 1230px){
   section .text-container {
     display: block;
@@ -261,8 +262,13 @@ AlwaysShowSection .reveal{
     opacity: 1;
   }
   .logotop {
-    display: table-cell; padding-left: 0%;width: auto;height: 19em;
-    padding-top: 8%; 
+    /* display: table-cell; padding-left: 0%;width: auto;height: 19em;
+    padding-top: 8%;  */
+    width: 80%;
+    max-width: 400px;
+    height: auto;
+    margin: auto;
+    padding-left: 0;
   }
   .texttop {
     text-align: center;
@@ -272,5 +278,12 @@ AlwaysShowSection .reveal{
   .sponsor {
     width: 100%;
     max-width: 300px; 
+  }
+  .mobilecenter {
+    text-align: center; 
+  }
+  .circles.active {
+    opacity: 0;
+    z-index: 0;
   }
 }
